Layout updates, dev Session Cache fix, menu fix, html bind on FAQ

--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.css
@@ -18,6 +18,11 @@ md-toolbar {
 md-toolbar .md-toolbar-tools {
   height: auto;
   padding: 0 8px;
+  color: #FF510B;
+}
+
+md-toolbar .md-toolbar-tools .md-button {
+  font-weight: bold !important;
 }
 
 .md-track-container {
