--- a/wp-content/plugins/projectdoom/doom-app/assets/libs/doom-icons/style.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/libs/doom-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'doom-icons';
-  src:  url('fonts/doom-icons.eot?jqrftc');
-  src:  url('fonts/doom-icons.eot?jqrftc#iefix') format('embedded-opentype'),
-    url('fonts/doom-icons.ttf?jqrftc') format('truetype'),
-    url('fonts/doom-icons.woff?jqrftc') format('woff'),
-    url('fonts/doom-icons.svg?jqrftc#doom-icons') format('svg');
+  src:  url('fonts/doom-icons.eot?z3yx9k');
+  src:  url('fonts/doom-icons.eot?z3yx9k#iefix') format('embedded-opentype'),
+    url('fonts/doom-icons.ttf?z3yx9k') format('truetype'),
+    url('fonts/doom-icons.woff?z3yx9k') format('woff'),
+    url('fonts/doom-icons.svg?z3yx9k#doom-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-blood:before {
+  content: "\e918";
+}
+.icon-vomits:before {
+  content: "\e919";
+}
 .icon-ant:before {
   content: "\e900";
 }
