--- a/wp-content/themes/doom/inc/css/admin.css
+++ b/wp-content/themes/doom/inc/css/admin.css
@@ -1,3 +1,12 @@
 #wpfooter {
     position: relative !important;
 }
+
+.meta-group {
+    margin-bottom: 2em;
+}
+
+.meta-group strong {
+    display: block;
+    margin-top: 2em;
+}
