--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -1089,6 +1089,15 @@ h3.page-title {
 	top:0;
 } */
 
+.md-dialog-backdrop {
+	background: #14a774;
+    opacity: 0.9 !important;
+}
+
+.md-dialog-content p {
+	color:#fff;
+	font-size: 20px;
+}
 /**
 * 
 * Gallery UI Component CSS 
